               thus lov is now aware of administratively enable/disable import
               event, and is able to udpate the 'ltd_activate' accordingly.

Severity   : normal
Bugzilla   : 20288
Description: kiblnd_check_conns can deadlock

Severity   : normal
Bugzilla   : 20153
Description: o2ib configuration issues with IB bonding

-------------------------------------------------------------------------------

2011-05-12 Oracle, Inc.
	* version 1.8.6
	* Support for kernels:
	  2.6.16.60-0.42.8 (SLES 10),
	  2.6.27.39-0.3.1 (SLES11),
	  2.6.18-194.3.1.el5 (RHEL 5)
	  2.6.18-194.3.1.0.1.el5 (OEL 5)
	* Client support for unpatched kernels:
	  (see http://wiki.lustre.org/index.php?title=Patchless_Client)
	  2.6.16 - 2.6.30 vanilla (kernel.org)
	* Recommended e2fsprogs version: 1.41.10-sun2
	* The async journal commit feature (bug 19128) and the cancel
	  lock before replay feature (bug 16774) are disabled by default.

Severity   : normal
Bugzilla   : 23081
Description: llap pages are moved to head of LRU list instead of tail

Severity   : normal
Bugzilla   : 15962
Description: disable statahead by default due to important races found in the
             statahead implementation.

Severity   : normal
Bugzilla   : 21804
Description: release request ref through ptlrpc_server_drop_request()
Details    : make sure the request is protected by rq_refcount while
             being processed in ptlrpc_server_handle_req_in().

Severity   : normal
Bugzilla   : 20394
Description: correct check for transno value in filter_finish_transno()

Severity   : normal
Bugzilla   : 24048
Description: Set body->eadatasize in mdc_getattr_pack()

Severity   : normal
Bugzilla   : 23820
Description: Handle unsent requests with rq_net_err in ptlrpc_check_set()

Severity   : normal
Bugzilla   : 21760
Description: apps stuck in ptlrpc_check_set() during direct I/O
Details    : start async bulk unregistering at the same time at reply unlink

Severity   : normal
Bugzilla   : 24039